# mpg123

./: CMakeLists.txt
src/: config.h
